Implementando formulário e buscas

--- a/src/app/componentes/topo/topo.component.html
+++ b/src/app/componentes/topo/topo.component.html
@@ -1,1 +1,9 @@
-<h1>--Topo--</h1>
+<header class="cabecalho">
+	<mat-toolbar color="primary">
+        <button mat-icon-button>
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>Tabela FIPE</span>
+        <span class="topo-spacer"></span>
+      </mat-toolbar>
+</header>
