--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -1,1 +1,34 @@
-<p>--Formulario--</p>
+<section class="main-content">
+    <form class="formulario">
+        <mat-form-field appearance="outline" id="selectMarca"> 
+            <mat-label>-- Selecione a marca --</mat-label>
+            <mat-select name="marca" [(ngModel)]="filtros.marca"  (selectionChange)="getModelos()">
+              @for (marca of marcasLista; track marca) {
+                <mat-option [value]="marca.codigo" >{{marca.nome | uppercase}}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field appearance="outline" id="selectModelo"> 
+            <mat-label>-- Selecione o modelo --</mat-label>
+            <mat-select name="modelo" [(ngModel)]="filtros.modelo" (selectionChange)="getAnos()">
+              @for (modelo of modelosLista.modelos; track modelo) {
+                <mat-option [value]="modelo.codigo" >{{modelo.nome | uppercase}}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field appearance="outline" id="selectAno"> 
+            <mat-label>-- Selecione o ano --</mat-label>
+            <mat-select name="ano" [(ngModel)]="filtros.ano">
+              @for (ano of anosLista; track ano) {
+                <mat-option [value]="ano.codigo" >{{ano.nome | uppercase}}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+          <div class="button-row">
+            <button mat-flat-button class="button" color="primary" (click)="getValores()" [disabled]="formularioPreenchido">    
+                <mat-icon>search</mat-icon>Pesquisar
+            </button>
+          </div>
+      </form>
+      <mat-divider></mat-divider>
+ </section> 
